@@ -138,6 +138,10 @@ o The NSE C modules in nselib-bin are now linked explicitly against
   Because RPM builds are static this fixes NSE C modules in
   RPMs. [David]
 
+o A new attribute has been added to XML output, scanflags, which lists
+  all user specified --scanflags for the scan. The XML output version
+  and DTD have been modified to account for this. [Michael]
+
 Nmap 4.68 [2008-6-28]
 
 o Doug integrated all of your version detection submissions and
